--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
   </section>
 
-  <section class="sixth">
+  <div class="sixth">
     <div class="company-logo-div row">
       <div class="col-lg-2">
         <img class="company-logo" src="images/logo-google.png" alt="">
@@ -117,7 +117,7 @@
         <img class="company-logo" src="images/logo-vector-graphics.png" alt="">
       </div>
     </div>
-  </section>
+  </div>
   <section class="seventh">
     <h2 class="heading">Clipboard for iOS and Mac OS</h2>
     <p class="para"> Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
@@ -127,7 +127,7 @@
     </div>
   </section>
 
-  <section class="eighth">
+  <div class="eighth">
     <div class="contact-div row">
 
       <div class="col-lg-3">
@@ -150,9 +150,9 @@
 
       <div class="col-lg-3">
         <div class="social-main">
-          <a href="https://www.facebook.com/vaibhav.chandak.73?ref=bookmarks"><img class="social" src="images/icon-facebook.svg" alt=""></a>
-          <a href="https://www.instagram.com/vaibhv.chandak/"><img class="social" src="images/icon-instagram.svg" alt=""></a>
-          <a href="https://vaibhav121121.github.io/CV2/"><img class="social" src="images/icon-twitter.svg" alt=""></a>
+          <a href="https://www.facebook.com/vaibhav.chandak.73?ref=bookmarks"><img class="social" src="images/icon-facebook.svg" alt="Facebook-icon"></a>
+          <a href="https://www.instagram.com/vaibhv.chandak/"><img class="social" src="images/icon-instagram.svg" alt="Instagram-icon"></a>
+          <a href="https://vaibhav121121.github.io/CV2/"><img class="social" src="images/icon-twitter.svg" alt="Twitter-icon"></a>
         </div>
       </div>
     </div>
@@ -163,7 +163,7 @@
         Coded by <a href="https://vaibhav121121.github.io/CV2/">Vaibhav</a>.
       </p>
     </footer>
-  </section>
+  </div>
 
 
 
